@@ -1,10 +1,10 @@
 todoyu core changelog
 
 core 2.1.3 - not released yet
-	* Changed: Format of duration (hour)
 	* Bugfix: Cropping of tabs didn't work correctly in ie. Due to substr(negativeValue)
-	* Added: Cropping for database relation labels in form
+	* Bugfix: Checkbox had problem with default value
 	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
+	* Added: Cropping for database relation labels in form
 	* Added TodoyuTime::time() to set null values to current time
 	* Added TodoyuDateRange
 	* Added TodoyuArray::createMap()
@@ -14,6 +14,7 @@ core 2.1.3 - not released yet
 	* Added: update() and updateField()
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
+	* Changed: Format of duration (hour)
 	* Removed: Moved continuous integration files to private extension
 	* Removed: Username list from debug function. Were never used
 	* Removed: Color styles for project (moved to project)
